--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
         "laravelcollective/html": "5.0.*",
-		"intervention/image": "2.3.*",
-        "maatwebsite/excel": "2.0.0",
+		"intervention/image": "^2.3",
+        "maatwebsite/excel": "~2.0.0",
         "barryvdh/laravel-dompdf": "dev-master"
 	},
 	"require-dev": {
