--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-DB_DATABASE= base_tfc
+DB_DATABASE= tfc
 DB_DATABASE_USERS = base_admin
 DB_USERNAME=root
 DB_PASSWORD=
