--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_HOST=localhost
 DB_DATABASE= tfc
 DB_DATABASE_USERS = base_admin
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
