--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-
+x
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
-DB_HOST=200.110.132.15
+DB_HOST=localhost
 DB_DATABASE= admin_tfc
-DB_DATABASE_USERS = admin_tfcsistema
-DB_USERNAME=admin
-DB_PASSWORD=tadeom2475
+DB_DATABASE_USERS = base_admin
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
