--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-DB_DATABASE= tfc
-DB_DATABASE_USERS = the
+DB_DATABASE= admin_tfc
+DB_DATABASE_USERS = base_admin
 DB_USERNAME=root
 DB_PASSWORD=
 
