--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
-DB_HOST=localhost
-DB_DATABASE= tfc
-DB_DATABASE_USERS = base_admin
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_HOST=www.navcoder.net
+DB_DATABASE= admin_tfc
+DB_DATABASE_USERS = base_tfcsistema
+DB_USERNAME=admin
+DB_PASSWORD=tadeom2475
 
 
 
