--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@ APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 
-DB_DATABASE= admin_tfc
+DB_DATABASE= tfc
 DB_DATABASE_USERS = base_admin
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
