--- a/.env
+++ b/.env
@@ -1,14 +1,15 @@
 
+
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
-DB_HOST=localhost
+DB_HOST=www.navcoder.net
 
-DB_DATABASE= tfc
-DB_DATABASE_USERS = base_admin
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE= admin_tfc
+DB_DATABASE_USERS = admin_tcsistema
+DB_USERNAME=admin
+DB_PASSWORD=tadeom2475
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
