--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
-DB_HOST=www.navcoder.net
+DB_HOST=localhost
 
 DB_DATABASE= admin_tfc
-DB_DATABASE_USERS = admin_tcsistema
-DB_USERNAME=admin
-DB_PASSWORD=tadeom2475
+DB_DATABASE_USERS = tfc
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
