--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_KEY=SomeRandomString
 DB_HOST=localhost
 
 DB_DATABASE= admin_tfc
-DB_DATABASE_USERS = tfc
+DB_DATABASE_USERS = base_admin
 DB_USERNAME=root
 DB_PASSWORD=
 
