5mb required canchas y sedes

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 DB_DATABASE= tfc
-DB_DATABASE_USERS = base_admin
+DB_DATABASE_USERS = tfc
 DB_USERNAME=root
 DB_PASSWORD=root
 
