--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-DB_DATABASE= tfc
-DB_DATABASE_USERS = base_admin
+DB_DATABASE = tfc
+DB_DATABASE_USERS= tfc
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
