--- a/.env
+++ b/.env
@@ -5,17 +5,12 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-<<<<<<< HEAD
+
 DB_DATABASE= tfc
 DB_DATABASE_USERS = tfc
-=======
 
-DB_DATABASE = tfc
-DB_DATABASE_USERS= tfc
-
->>>>>>> 25ce893e2daaf2ef4600b33a7b0ee3656532c63c
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
