--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 
-DB_DATABASE= tfc
-DB_DATABASE_USERS = tfc
+DB_DATABASE= admin_tfc
+DB_DATABASE_USERS = admin_tfc
 
 DB_USERNAME=root
 DB_PASSWORD=
