--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-.env
-.env.*.php
-.env.php
-.DS_Store
-Thumbs.db
-/public/uploads
+.idea
+recaptcha?keys.txt
+/vendor
 /node_modules
-
+Homestead.yaml
+.env
+.DS_Store
+/public/uploads
 .idea/workspace.xml
+
+
+
+
+
