--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_DATABASE= tfc
 DB_DATABASE_USERS = tfc
 
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
