mail despues de compra

--- a/.env_example
+++ b/.env_example
@@ -8,6 +8,16 @@ DB_DATABASE_USERS =
 DB_USERNAME = root
 DB_PASSWORD =
 
+
+TODO_PAGO_URL_OK =  http://motonet.com.ar/testing/exito/
+TODO_PAGO_URL_ERROR = http://motonet.com.ar/testing/error/
+TODO_PAGO_MODE  = test
+
+MERCADO_PAGO_URL_SUCCESS = http://motonet.com.ar/testing/mp/success
+MERCADO_PAGO_URL_FAILURE = http://motonet.com.ar/testing/mp/failure
+MERCADO_PAGO_URL_PENDING = http://motonet.com.ar/testing/mp/pending
+MERCADO_PAGO_MODE = prod
+
 CACHE_DRIVER    =file
 SESSION_DRIVER  =file
 QUEUE_DRIVER    =sync
