--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 
-DB_DATABASE= tfc
+DB_DATABASE= admin_tfc
 DB_DATABASE_USERS = tfc
 
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 
 CACHE_DRIVER=file
