--- a/.env_example
+++ b/.env_example
@@ -3,10 +3,10 @@ APP_DEBUG   =true
 APP_KEY     =h5P1lfFldGJZmKbiPDhASsXSmCU5xa8T
 
 DB_HOST     =localhost
-DB_DATABASE = test_cic
+DB_DATABASE = torneos
 DB_DATABASE_USERS =
 DB_USERNAME = root
-DB_PASSWORD =
+DB_PASSWORD = root
 
 CACHE_DRIVER    =file
 SESSION_DRIVER  =file
