--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "laravel-elixir": "*"
+  },
+  "dependencies": {
+    "express": "^4.10.2"
+
   }
 }
