--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravelcollective/html": "5.0.*",
 		"intervention/image": "^2.3",
         "maatwebsite/excel": "~2.0.0",
-        "barryvdh/laravel-dompdf": "dev-master"
+        "barryvdh/laravel-dompdf": "dev-master",
+
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
