--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		"intervention/image": "^2.3",
         "maatwebsite/excel": "~2.0.0",
         "barryvdh/laravel-dompdf": "dev-master",
+		"facebook/php-ads-sdk": "2.5.*"
 
 	},
 	"require-dev": {
