--- a/.env_example
+++ b/.env_example
@@ -18,6 +18,12 @@ MERCADO_PAGO_URL_FAILURE = http://motonet.com.ar/testing/mp/failure
 MERCADO_PAGO_URL_PENDING = http://motonet.com.ar/testing/mp/pending
 MERCADO_PAGO_MODE = prod
 
+API_MAILCHIMP_KEY =
+API_MAILCHIMP_URL =
+
+MAILCHIMP_LIST_CONTACT =
+MAILCHIMP_LIST_NEWSLETTER =
+
 CACHE_DRIVER    =file
 SESSION_DRIVER  =file
 QUEUE_DRIVER    =sync
