--- a/.env
+++ b/.env
@@ -4,13 +4,13 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
-DB_HOST=200.110.156.252
+DB_HOST=localhost
 
-DB_DATABASE= admin_tfc
-DB_DATABASE_USERS = admin_tfcsistema
+DB_DATABASE= tfc
+DB_DATABASE_USERS = tfc
 
-DB_USERNAME=admin_admin
-DB_PASSWORD=Qeps1PBZAe
+DB_USERNAME=root
+DB_PASSWORD=
 
 
 CACHE_DRIVER=file
