--- a/.env
+++ b/.env
@@ -4,13 +4,13 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
-DB_HOST=thefutbolcompany.com
+DB_HOST=localhost
 
-DB_DATABASE= admin_tfc
-DB_DATABASE_USERS = admin_tfcsistema
+DB_DATABASE= tfc
+DB_DATABASE_USERS = tfc
 
 DB_USERNAME=root
-DB_PASSWORD=ITfutbol15
+DB_PASSWORD=
 
 
 CACHE_DRIVER=file
