--- a/.env
+++ b/.env
@@ -2,16 +2,15 @@
 
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=0RPH0H77zPGonlg2AoUuU7fizYBNTGcN
 
 DB_HOST=localhost
 
 DB_DATABASE= tfc
-DB_DATABASE_USERS = tfc
+DB_DATABASE_USERS = tfc_users
 
 DB_USERNAME=root
 DB_PASSWORD=
-
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
